feat(interpreter): implement builtin function handling and codegen